tests/js_error/source_locations/class/fields/init_call_derived_constructor.exp
TypeError: BigInt cannot be converted to number
  ┌ source_locations/class/fields/init_call_derived_constructor.js:4:13
  |
4 |   field = 1 + 2n;
  |             ^
Stack trace:
  at fieldsInitializer (source_locations/class/fields/init_call_derived_constructor.js:4:13)
  at C (source_locations/class/fields/init_call_derived_constructor.js:8:5)
  at <global> (source_locations/class/fields/init_call_derived_constructor.js:12:1)